<resources>
    <string name="app_name">FamilyMapApp</string>
    <string name="login_fragment_tag">loginTag</string>
    <string name="map_fragment_tag">mapTag</string>
    <string name="settings_icon_title">Settings</string>
    <string name="search_icon_title">Search</string>


    <string name="usuario">Username</string>
    <string name="pass">Password</string>
    <string name="nombre">First Name</string>
    <string name="apellido">Last Name</string>
    <string name="correo">Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>

    <string name="login">Sign In</string>
    <string name="register">Register</string>

    <string name="login_success">Welcome</string>
    <string name="login_fail">Login Failed</string>

    <string name="register_success">Welcome</string>
    <string name="register_fail">Register Failed</string>
    <string name="map_bottom_text">Click a marker to view an event</string>

    <string name="life_event_list">Life Events</string>
    <string name="direct_family_list">Family</string>

    <string name="eventID_intent">eventIDIntent</string>
    <string name="personID_intent">personIDIntent</string>
    <string name="eventID_bundle">eventIDBundle</string>

    <string name="life_story_lines_title">Life Story Lines</string>
    <string name="life_story_lines_setting">Show life story lines</string>
    <string name="family_tree_lines_title">Family Tree Lines</string>
    <string name="family_tree_lines_setting">Show family tree lines</string>
    <string name="spouse_lines_title">Spouse Lines</string>
    <string name="spouse_lines_setting">Show spouse lines</string>
    <string name="father_side_title">Father\'s Side</string>
    <string name="father_side_setting">Filter by father\'s side of family</string>
    <string name="mother_side_title">Mother\'s Side</string>
    <string name="mother_side_setting">Filter by mother\'s side of family</string>
    <string name="male_event_title">Male Events</string>
    <string name="male_event_setting">Filter events based on gender</string>
    <string name="female_event_title">Female Events</string>
    <string name="female_event_setting">Filter events based on gender</string>
    <string name="logout_title">Logout</string>
    <string name="logout_setting">Return to login screen</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Family Map</string>
    <string name="second_fragment_label">Family Map</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="mapFragmentMessage">Click on an event to show more details</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!--Settings Activity-->
    <string name="logout">Logout</string>
    <string name="loginDesc">RETURN TO LOGIN SCREEN</string>
    <string name="resync">Re-Sync Data</string>
    <string name="resyncDesc">FROM FAMILY MAP SERVICE</string>
    <string name="maptype">Map Type</string>
    <string name="maptypeDesc">BACKGROUND DISPLAY ON MAP</string>
    <string name="spouseLine">Spouse Lines</string>
    <string name="spouseLineDesc">SHOW SPOUSE LINES</string>
    <string name="familyTreeLine">Family Tree Lines</string>
    <string name="familyTreeLineDesc">SHOW TREE LINES</string>
    <string name="lifeStoryLine">Life Story Lines</string>
    <string name="lifeStoryLinesDesc">SHOW LIFE STORY LINES</string>
    <string name="login_button">SIGN IN</string>
    <string name="register_button">REGISTER</string>
    <string name="login_missing_params">Please fill in all required fields</string>

    <!--API KEY for Google Maps-->
    <string name="google_maps_key">AIzaSyB5swjXdsXpbfTI11qWWe9uHsMOATQOyJ8</string>
    <string-array name="map_menu">
        <item>Normal</item>
        <item>Hybrid</item>
        <item>Satellite</item>
        <item>Terrain</item>
    </string-array>
</resources>